# rapidcheck

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  README.md  TODO.md  TODO.org  appveyor.yml  bazel  main.cpp  pkg-config.pc.cmake  rapidcheck-config.cmake.in  rapidcheck.gyp
doc/: Gen.md  Seq.md  Shrinkable.md  assertions.md  boost.md  boost_test.md  catch.md  configuration.md  debugging.md  displaying.md  distribution.md  doctest.md  generators.md  generators_ref.md  gmock.md  gtest.md  parallel.md  properties.md  state.md  state_ref.md  user_guide.md
examples/: CMakeLists.txt
examples/boost_test/: CMakeLists.txt  main.cpp
examples/classify/: CMakeLists.txt  main.cpp
examples/counter/: CMakeLists.txt  main.cpp
examples/database/: CMakeLists.txt  Database.cpp  Database.h  DatabaseConnection.cpp  DatabaseConnection.h  Generators.h  User.cpp  User.h  main.cpp
examples/gtest/: CMakeLists.txt  main.cpp
examples/mapparser/: CMakeLists.txt  MapParser.cpp  MapParser.h  main.cpp
ext/: CMakeLists.txt  get_boost.sh  get_gmock.sh
extras/: CMakeLists.txt
extras/boost/: CMakeLists.txt
extras/boost/include/rapidcheck/: boost.h
extras/boost/test/: CMakeLists.txt  OptionalTests.cpp  main.cpp
extras/boost_test/: CMakeLists.txt
extras/boost_test/include/rapidcheck/: boost_test.h
extras/catch/: CMakeLists.txt
extras/catch/include/rapidcheck/: catch.h
extras/doctest/: CMakeLists.txt
extras/gmock/: CMakeLists.txt
extras/gmock/include/rapidcheck/: gmock.h
extras/gmock/test/: CMakeLists.txt  main.cpp
extras/gtest/: CMakeLists.txt
extras/gtest/include/rapidcheck/: gtest.h
include/: rapidcheck-catch.h  rapidcheck.h
include/rapidcheck/: Assert.h  Assertions.h  Assertions.hpp  Check.h  Check.hpp  Classify.h  Classify.hpp  Compat.hpp  Gen.h  Gen.hpp  GenerationFailure.h  Generator.h  Log.hpp  Maybe.h  Maybe.hpp  Random.h  Random.hpp  Seq.h  Seq.hpp  Show.h  Show.hpp  Shrink.h  Shrinkable.h  Shrinkable.hpp  State.h  Traits.h  state.h
include/rapidcheck/arbitrary/: Arbitrary.h  Arbitrary.hpp  Collection.h  Collection.hpp  Numeric.h  Numeric.hpp  Tuple.h  Tuple.hpp
include/rapidcheck/detail/: AlignedUnion.h  Any.h  Any.hpp  ApplyTuple.h  Arbitrary.hpp  Assert.h  Barrier.h  BitStream.h  BitStream.hpp  Check.h  Check.hpp  CollectionBuilder.h  CollectionBuilder.hpp  Compiler.h  Configuration.h  Cpp11.h  (+54 more)
rapidcheck/: Arbitrary.hpp  Check.h  Check.hpp  Context.hpp  Generator.h  Generator.hpp  GeneratorProxy.hpp  Generators.hpp  ImplicitParam.hpp  RandomEngine.hpp  Rose.hpp  Show.h  Show.hpp  Shrink.h  Shrink.hpp  Utility.hpp  Value.hpp  rapidcheck.h
rapidcheck/detail/: AnsiEscape.hpp  Arbitrary.hpp  Check.hpp  ConsoleDelegate.hpp  GenerationParams.hpp  Generator.hpp  GeneratorProxy.hpp  ImplicitParam.hpp  RandomEngine.hpp  Results.hpp  Rose.hpp  Show.hpp  Shrink.hpp  Suite.hpp  Utility.hpp  ValueProxy.hpp
src/: AnsiEscape.cpp  AnsiEscape.h  Any.cpp  Assert.cpp  Check.cpp  ConsoleDelegate.cpp  ConsoleDelegate.h  GenerationFailure.cpp  Generator.cpp  Random.cpp  Results.cpp  Results.h  Rose.cpp  Show.cpp  Suite.cpp  Utility.cpp  ValueDescription.cpp
src/detail/: AnsiEscape.cpp  Any.cpp  Assertions.cpp  Barrier.cpp  Base64.cpp  Base64.h  Check.cpp  Configuration.cpp  DefaultTestListener.cpp  ExpressionCaptor.cpp  FrequencyMap.cpp  ImplicitParam.cpp  LogTestListener.cpp  MapParser.cpp  MapParser.h  NewProperty.cpp  ParseException.cpp  ParseException.h  Platform.cpp  Property.cpp  PropertyContext.cpp  RandomEngine.cpp  Results.cpp  RoseNode.cpp  StringSerialization.cpp  TestParams.cpp  Testing.cpp  Testing.h  Utility.cpp  ValueDescription.cpp
src/seq/: Create.cpp
src/state/: Commands.cpp
test/: AnyTests.cpp  ArbitraryTests.cpp  AssertionsTests.cpp  CMakeLists.txt  CheckTests.cpp  ClassifyTests.cpp  ConfigurationTests.cpp  GenTests.cpp  GeneratorTests.cpp  ImplicitParamTests.cpp  LogTests.cpp  MapParserTests.cpp  MaybeTests.cpp  Meta.h  MyNonCopyable.h  RandomEngineTests.cpp  RandomTests.cpp  RoseTests.cpp  SeqTests.cpp  ShowTests.cpp  ShowTypeTests.cpp  ShrinkTestUtils.h  ShrinkTests.cpp  ShrinkableTests.cpp  Utils.h  VariantTests.cpp  main.cpp
test/arbitrary/: CollectionTests.cpp  NumericTests.cpp
test/detail/: AnyTests.cpp  ApplyTupleTests.cpp  Base64Tests.cpp  BitStreamTests.cpp  CaptureTests.cpp  ConfigurationTests.cpp  DefaultTestListenerTests.cpp  ExpressionCaptorTests.cpp  FrequencyMapTests.cpp  ImplicitParamTests.cpp  LogTestListenerTests.cpp  MapParserTests.cpp  MulticastTestListenerTests.cpp  NewPropertyTests.cpp  PolymorphicStorageTests.cpp  PropertyTests.cpp  RandomEngineTests.cpp  ReproduceListenerTests.cpp  ResultsTests.cpp  RoseTests.cpp  SerializationTests.cpp  ShowTypeTests.cpp  StringSerializationTests.cpp  TestMetadataTests.cpp  TestParamsTests.cpp  TestingTests.cpp  UnicodeTests.cpp  Utility.cpp  VariantTests.cpp
test/detail/SerializationTests/: CompactIntegers.cpp  CompactRanges.cpp  Integers.cpp  Misc.cpp
test/fn/: CommonTests.cpp
test/newgen/: ContainerTests.cpp  CreateTests.cpp  DistinctTests.cpp  ExecTests.cpp  NumericTests.cpp  SelectTests.cpp  TextTests.cpp  TransformTests.cpp  TupleTests.cpp
test/newgen/detail/: ExecRawTests.cpp  RecipeTests.cpp  ShrinkValueIteratorTests.cpp
test/predicate/: Predicates.cpp  PredicatesTests.cpp
test/seq/: CreateTests.cpp  OperationsTests.cpp  SeqIteratorTests.cpp  TransformTests.cpp
test/shrink/: NewShrinkTests.cpp  ShrinkTests.cpp
test/shrinkable/: CreateTests.cpp  OperationsTests.cpp  TransformTests.cpp
test/state/: CommandTests.cpp  CommandsGenTests.cpp  CommandsTests.cpp  IntegrationTests.cpp  StateTests.cpp
test/util/: Aggregate.h  AppleOrange.h  ArbitraryRandom.cpp  ArbitraryRandom.h  Box.h  CopyGuard.h  DestructNotifier.h  GenUtils.cpp  GenUtils.h  Generators.h  IntVec.h  Logger.h  Meta.h  MockTestListener.h  NonCopyableModel.h  Predictable.h  SeqUtils.h  Serialization.h  ShowTypeTestUtils.h  ShrinkableUtils.cpp  ShrinkableUtils.h  StringVec.h  TemplateProps.h  ThrowOnCopy.h  TypeListMacros.h  Util.h
tools/: bazel.rc
(+63 files in other folders)
